Correction for the patch to fix bug #35835.